--- a/docs/docs-ref-autogen/visio/visio/visio.pageview.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.pageview.yml
@@ -7,7 +7,7 @@ summary: >-
   表示 PageView 类。
 
 
-  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: visio!Visio.PageView#context:member
   package: visio!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -30,10 +30,10 @@ properties:
   package: visio!
   fullName: zoom
   summary: >-
-    获取和设置页面的缩放级别。 该值可以介于10和400之间，表示缩放百分比。
+    获取和设置页面的缩放级别。 该值可以介于 10 和 400 之间，并指示缩放的百分比。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -51,7 +51,7 @@ methods:
     平移 Visio 绘图，将指定的形状放置在视图中心位置。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -72,7 +72,7 @@ methods:
     让页面填满当前窗口。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -89,7 +89,7 @@ methods:
     返回在视图中指定页面位置的 Position 对象。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -106,7 +106,7 @@ methods:
     表示页面中的 Selection 对象。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -123,7 +123,7 @@ methods:
     检查形状是否在页面的视区内。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -145,13 +145,13 @@ methods:
     除了此签名之外，此方法还具有以下签名：
 
 
-    `load(option?: string | string[]): Visio.PageView` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+    `load(option?: string | string[]): Visio.PageView` - 其中选项是逗号分隔的字符串或指定要加载的属性的字符串数组。
 
 
-    `load(option?: { select?: string; expand?: string; }): Visio.PageView` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    `load(option?: { select?: string; expand?: string; }): Visio.PageView` - 其中 option.select 是一个以逗号分隔的字符串，用于指定要加载的属性，options.expand 是一个以逗号分隔的字符串，用于指定要加载的导航属性。
 
 
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.PageView` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.PageView` - 仅适用于集合类型。 它类似于前面的签名。 Option.top 指定结果中可包含的集合项的最大数量。 Option.skip 指定要跳过且未包含在结果中的项目数。 如果指定了 option.top，则结果集指定数量的项目后，将启动此参数。
   isPreview: false
   isDeprecated: false
   syntax:
@@ -175,25 +175,33 @@ methods:
     content: 'load(propertyNames?: string | string[]): Visio.PageView;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="visio!Visio.PageView:class" />
       description: ''
-- name: load(propertyNamesAndPaths)
+- name: load(option)
   uid: visio!Visio.PageView#load:member(3)
   package: visio!
-  fullName: load(propertyNamesAndPaths)
-  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  fullName: load(option)
+  summary: ''
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.PageView;'
+    content: >-
+      load(option?: {
+                  select?: string;
+                  expand?: string;
+              }): Visio.PageView;
     parameters:
-    - id: propertyNamesAndPaths
-      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-      type: '{ select?: string; expand?: string; }'
+    - id: option
+      description: ''
+      type: >-
+        {
+                    select?: string;
+                    expand?: string;
+                }
     return:
       type: <xref uid="visio!Visio.PageView:class" />
       description: ''
@@ -201,7 +209,7 @@ methods:
   uid: visio!Visio.PageView#set:member(1)
   package: visio!
   fullName: set(properties, options)
-  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  summary: 同时设置对象的多个属性。 可以使用相应的属性传递普通对象，也可以传递同一类型的另一个 API 对象。
   remarks: >-
     此方法具有以下附加签名：
 
@@ -213,10 +221,10 @@ methods:
     content: 'set(properties: Interfaces.PageViewUpdateData, options?: OfficeExtension.UpdateOptions): void;'
     parameters:
     - id: properties
-      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      description: 一个 JavaScript 对象，其属性按等态结构构造到调用该方法的对象的属性。
       type: <xref uid="visio!Visio.Interfaces.PageViewUpdateData:interface" />
     - id: options
-      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      description: 提供在属性对象尝试设置任何只读属性时禁止错误的选项。
       type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
     return:
       type: void
@@ -225,7 +233,7 @@ methods:
   uid: visio!Visio.PageView#set:member(2)
   package: visio!
   fullName: set(properties)
-  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  summary: 基于现有的已加载对象，同时设置对象上的多个属性。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -246,7 +254,7 @@ methods:
     在视图中设置页面的位置。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -263,7 +271,7 @@ methods:
   uid: visio!Visio.PageView#toJSON:member(1)
   package: visio!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 PageView 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Visio.Interfaces.PageViewData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始 Visio.PageView 对象是一个 API 对象，该方法返回一个纯 `toJSON` JavaScript 对象， (类型为 `toJSON``Visio.Interfaces.PageViewData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -274,9 +282,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: bb196a6e0d549184c9777f9e52a3582e7646a1bf
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 5e8b999f697cce04781ba4c55854d671249763be
+  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49249573"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "50542067"
