--- a/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysis.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.inkanalysis.yml
@@ -7,7 +7,7 @@ summary: >-
   表示一组给定墨迹笔划的墨迹分析数据。
 
 
-  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  \[[API 集：OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: onenote!OneNote.InkAnalysis#context:member
   package: onenote!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -33,7 +33,7 @@ properties:
     获取 InkAnalysis 对象的 ID。 只读。
 
 
-    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+    \[[API 集：OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,7 +49,7 @@ properties:
     获取父页对象。 只读。
 
 
-    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+    \[[API 集：OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -67,13 +67,13 @@ methods:
     除了此签名之外，此方法还具有以下签名：
 
 
-    `load(option?: string | string[]): OneNote.InkAnalysis` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+    `load(option?: string | string[]): OneNote.InkAnalysis` - 其中选项是逗号分隔的字符串或指定要加载的属性的字符串数组。
 
 
-    `load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysis` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    `load(option?: { select?: string; expand?: string; }): OneNote.InkAnalysis` - 其中 option.select 是一个以逗号分隔的字符串，用于指定要加载的属性，options.expand 是一个以逗号分隔的字符串，用于指定要加载的导航属性。
 
 
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysis` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.InkAnalysis` - 仅适用于集合类型。 它类似于前面的签名。 Option.top 指定结果中可包含的集合项的最大数量。 Option.skip 指定要跳过且未包含在结果中的项目数。 如果指定了 option.top，则结果集指定数量的项目后，将启动此参数。
   isPreview: false
   isDeprecated: false
   syntax:
@@ -97,25 +97,33 @@ methods:
     content: 'load(propertyNames?: string | string[]): OneNote.InkAnalysis;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="onenote!OneNote.InkAnalysis:class" />
       description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nOneNote.run(function (ctx) {        \n    var app = ctx.application;\n    \n    // Gets the active page.\n    var page = app.getActivePage();\n    \n    // Load ink paragraphs.\n    page.load('inkAnalysisOrNull/paragraphs');\n    \n    return ctx.sync()\n        .then(function() {\n            console.log(page.inkAnalysisOrNull.paragraphs.items.length);\n        })\n})\n.catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n}); \n```"
-- name: load(propertyNamesAndPaths)
+- name: load(option)
   uid: onenote!OneNote.InkAnalysis#load:member(3)
   package: onenote!
-  fullName: load(propertyNamesAndPaths)
-  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  fullName: load(option)
+  summary: ''
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): OneNote.InkAnalysis;'
+    content: >-
+      load(option?: {
+                  select?: string;
+                  expand?: string;
+              }): OneNote.InkAnalysis;
     parameters:
-    - id: propertyNamesAndPaths
-      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-      type: '{ select?: string; expand?: string; }'
+    - id: option
+      description: ''
+      type: >-
+        {
+                    select?: string;
+                    expand?: string;
+                }
     return:
       type: <xref uid="onenote!OneNote.InkAnalysis:class" />
       description: ''
@@ -123,7 +131,7 @@ methods:
   uid: onenote!OneNote.InkAnalysis#set:member(1)
   package: onenote!
   fullName: set(properties, options)
-  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  summary: 同时设置对象的多个属性。 可以使用相应的属性传递普通对象，也可以传递同一类型的另一个 API 对象。
   remarks: >-
     此方法具有以下附加签名：
 
@@ -135,10 +143,10 @@ methods:
     content: 'set(properties: Interfaces.InkAnalysisUpdateData, options?: OfficeExtension.UpdateOptions): void;'
     parameters:
     - id: properties
-      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      description: 一个 JavaScript 对象，其属性按等态结构构造到调用该方法的对象的属性。
       type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisUpdateData:interface" />
     - id: options
-      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      description: 提供在属性对象尝试设置任何只读属性时禁止错误的选项。
       type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
     return:
       type: void
@@ -147,7 +155,7 @@ methods:
   uid: onenote!OneNote.InkAnalysis#set:member(2)
   package: onenote!
   fullName: set(properties)
-  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  summary: 基于现有的已加载对象，同时设置对象上的多个属性。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -164,7 +172,7 @@ methods:
   uid: onenote!OneNote.InkAnalysis#toJSON:member(1)
   package: onenote!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 InkAnalysis 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `OneNote.Interfaces.InkAnalysisData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的对象的方法。) 而原始 `toJSON` OneNote.InkAnalysis 对象是一个 API 对象，该方法返回一个纯 JavaScript 对象， (类型为 `toJSON``OneNote.Interfaces.InkAnalysisData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -201,9 +209,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: d4d72a90b89aff1dc38077e38b7d0f0f09e7aa79
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 5012a3a048480b71639bb9e281cee5eddaee5596
+  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49183046"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "50542032"
