--- a/docs/docs-ref-autogen/visio/visio/visio.hyperlink.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.hyperlink.yml
@@ -7,7 +7,7 @@ summary: >-
   表示 Hyperlink 对象。
 
 
-  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -21,7 +21,7 @@ properties:
     获取超链接对象的地址。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -33,7 +33,7 @@ properties:
   uid: visio!Visio.Hyperlink#context:member
   package: visio!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,7 +49,7 @@ properties:
     获取超链接的说明。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -62,10 +62,10 @@ properties:
   package: visio!
   fullName: extraInfo
   summary: >-
-    获取用于解析超链接的 URL 的额外 URL 请求信息。 只读。
+    获取用于解析超链接 URL 的额外 URL 请求信息。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -81,7 +81,7 @@ properties:
     获取超链接对象的子地址。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -99,13 +99,13 @@ methods:
     除了此签名之外，此方法还具有以下签名：
 
 
-    `load(option?: string | string[]): Visio.Hyperlink` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+    `load(option?: string | string[]): Visio.Hyperlink` - 其中选项是逗号分隔的字符串或指定要加载的属性的字符串数组。
 
 
-    `load(option?: { select?: string; expand?: string; }): Visio.Hyperlink` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    `load(option?: { select?: string; expand?: string; }): Visio.Hyperlink` - 其中 option.select 是一个以逗号分隔的字符串，用于指定要加载的属性，options.expand 是一个以逗号分隔的字符串，用于指定要加载的导航属性。
 
 
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink` - 仅适用于集合类型。 它类似于前面的签名。 Option.top 指定结果中可包含的集合项的最大数量。 Option.skip 指定要跳过且未包含在结果中的项目数。 如果指定了 option.top，则结果集指定数量的项目后，将启动此参数。
 
 
     #### <a name="examples"></a>示例
@@ -155,25 +155,33 @@ methods:
     content: 'load(propertyNames?: string | string[]): Visio.Hyperlink;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="visio!Visio.Hyperlink:class" />
       description: ''
-- name: load(propertyNamesAndPaths)
+- name: load(option)
   uid: visio!Visio.Hyperlink#load:member(3)
   package: visio!
-  fullName: load(propertyNamesAndPaths)
-  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  fullName: load(option)
+  summary: ''
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Hyperlink;'
+    content: >-
+      load(option?: {
+                  select?: string;
+                  expand?: string;
+              }): Visio.Hyperlink;
     parameters:
-    - id: propertyNamesAndPaths
-      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-      type: '{ select?: string; expand?: string; }'
+    - id: option
+      description: ''
+      type: >-
+        {
+                    select?: string;
+                    expand?: string;
+                }
     return:
       type: <xref uid="visio!Visio.Hyperlink:class" />
       description: ''
@@ -181,7 +189,7 @@ methods:
   uid: visio!Visio.Hyperlink#toJSON:member(1)
   package: visio!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 Visio. Hyperlink 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `Visio.Interfaces.HyperlinkData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始 Visio.Hyperlink 对象是 API 对象，该方法返回一个纯 `toJSON` JavaScript 对象， (类型为 `toJSON``Visio.Interfaces.HyperlinkData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -192,9 +200,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 5def5f7e531673ecdd2305a113668f53fa4405c2
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 4c0d3c20940c29cbabf0d67c3a5b30ae99954caa
+  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49328450"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "50542165"
