--- a/docs/docs-ref-autogen/visio/visio/visio.selection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.selection.yml
@@ -7,7 +7,7 @@ summary: >-
   表示页面中的 Selection 对象。
 
 
-  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: visio!Visio.Selection#context:member
   package: visio!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -30,10 +30,10 @@ properties:
   package: visio!
   fullName: shapes
   summary: >-
-    获取所选内容的形状。 只读。
+    获取选定内容的形状。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -54,25 +54,33 @@ methods:
     content: 'load(propertyNames?: string | string[]): Visio.Selection;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="visio!Visio.Selection:class" />
       description: ''
-- name: load(propertyNamesAndPaths)
+- name: load(option)
   uid: visio!Visio.Selection#load:member(2)
   package: visio!
-  fullName: load(propertyNamesAndPaths)
-  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  fullName: load(option)
+  summary: ''
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Selection;'
+    content: >-
+      load(option?: {
+                  select?: string;
+                  expand?: string;
+              }): Visio.Selection;
     parameters:
-    - id: propertyNamesAndPaths
-      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-      type: '{ select?: string; expand?: string; }'
+    - id: option
+      description: ''
+      type: >-
+        {
+                    select?: string;
+                    expand?: string;
+                }
     return:
       type: <xref uid="visio!Visio.Selection:class" />
       description: ''
@@ -80,7 +88,7 @@ methods:
   uid: visio!Visio.Selection#toJSON:member(1)
   package: visio!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 Visio. Selection 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (键入为 `Visio.Interfaces.SelectionData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始 Visio.Selection 对象是一个 API 对象，该方法返回一个纯 `toJSON` JavaScript 对象， (类型为 `toJSON``Visio.Interfaces.SelectionData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -91,9 +99,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 40b8a0d2499cc3e97cf265a14714ebddb79ebd03
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: fc5b90ca320a53f31f78dda310bfdd4f6327f262
+  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49249468"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "50542060"
