--- a/docs/docs-ref-autogen/visio/visio/visio.shape.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shape.yml
@@ -7,7 +7,7 @@ summary: >-
   表示 Shape 类。
 
 
-  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -21,7 +21,7 @@ properties:
     返回注释集合。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -33,7 +33,7 @@ properties:
   uid: visio!Visio.Shape#context:member
   package: visio!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,7 +49,7 @@ properties:
     返回一组形状对象超链接。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -65,7 +65,7 @@ properties:
     形状的标识符。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -81,7 +81,7 @@ properties:
     形状的名称。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -97,7 +97,7 @@ properties:
     如果选择形状，则返回 true。 用户可以设置为 true，从而明确选择形状。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -113,7 +113,7 @@ properties:
     返回形状的数据部分。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -129,7 +129,7 @@ properties:
     获取 SubShape 集合。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -145,7 +145,7 @@ properties:
     形状的文本。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -161,7 +161,7 @@ properties:
     返回形状的视图。 只读。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -178,7 +178,7 @@ methods:
     返回指定形状边界框的 BoundingBox 对象。
 
 
-    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+    \[[API 集：1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -196,13 +196,13 @@ methods:
     除了此签名之外，此方法还具有以下签名：
 
 
-    `load(option?: string | string[]): Visio.Shape` -Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
+    `load(option?: string | string[]): Visio.Shape` - 其中选项是逗号分隔的字符串或指定要加载的属性的字符串数组。
 
 
-    `load(option?: { select?: string; expand?: string; }): Visio.Shape` -Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+    `load(option?: { select?: string; expand?: string; }): Visio.Shape` - 其中 option.select 是一个以逗号分隔的字符串，用于指定要加载的属性，options.expand 是一个以逗号分隔的字符串，用于指定要加载的导航属性。
 
 
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Shape` -仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
+    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Shape` - 仅适用于集合类型。 它类似于前面的签名。 Option.top 指定结果中可包含的集合项的最大数量。 Option.skip 指定要跳过且未包含在结果中的项目数。 如果指定了 option.top，则结果集指定数量的项目后，将启动此参数。
   isPreview: false
   isDeprecated: false
   syntax:
@@ -226,25 +226,33 @@ methods:
     content: 'load(propertyNames?: string | string[]): Visio.Shape;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="visio!Visio.Shape:class" />
       description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nVisio.run(session, function (ctx) {\n    var activePage = ctx.document.getActivePage();\n    var shapeName = \"Sample Name\";\n    var shape = activePage.shapes.getItem(shapeName);\n    shape.load([\"name\", \"id\", \"text\", \"select\"]);\n    return ctx.sync().then(function () {\n        console.log(shape.name);\n        console.log(shape.id);\n        console.log(shape.text);\n        console.log(shape.select);\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```javascript\nVisio.run(session, function (ctx) {\n    var activePage = ctx.document.getActivePage();\n    var shape = activePage.shapes.getItem(0);\n    shape.view.highlight = { color: \"#E7E7E7\", width: 100 };\n    return ctx.sync();\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```"
-- name: load(propertyNamesAndPaths)
+- name: load(option)
   uid: visio!Visio.Shape#load:member(3)
   package: visio!
-  fullName: load(propertyNamesAndPaths)
-  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  fullName: load(option)
+  summary: ''
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Shape;'
+    content: >-
+      load(option?: {
+                  select?: string;
+                  expand?: string;
+              }): Visio.Shape;
     parameters:
-    - id: propertyNamesAndPaths
-      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-      type: '{ select?: string; expand?: string; }'
+    - id: option
+      description: ''
+      type: >-
+        {
+                    select?: string;
+                    expand?: string;
+                }
     return:
       type: <xref uid="visio!Visio.Shape:class" />
       description: ''
@@ -252,7 +260,7 @@ methods:
   uid: visio!Visio.Shape#set:member(1)
   package: visio!
   fullName: set(properties, options)
-  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  summary: 同时设置对象的多个属性。 可以使用相应的属性传递普通对象，也可以传递同一类型的另一个 API 对象。
   remarks: >-
     此方法具有以下附加签名：
 
@@ -264,10 +272,10 @@ methods:
     content: 'set(properties: Interfaces.ShapeUpdateData, options?: OfficeExtension.UpdateOptions): void;'
     parameters:
     - id: properties
-      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      description: 一个 JavaScript 对象，其属性按等态结构构造到调用该方法的对象的属性。
       type: <xref uid="visio!Visio.Interfaces.ShapeUpdateData:interface" />
     - id: options
-      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      description: 提供在属性对象尝试设置任何只读属性时禁止错误的选项。
       type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
     return:
       type: void
@@ -276,7 +284,7 @@ methods:
   uid: visio!Visio.Shape#set:member(2)
   package: visio!
   fullName: set(properties)
-  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  summary: 基于现有的已加载对象，同时设置对象上的多个属性。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -293,7 +301,7 @@ methods:
   uid: visio!Visio.Shape#toJSON:member(1)
   package: visio!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 Visio 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `Visio.Interfaces.ShapeData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始 Visio.Shape 对象是一个 API 对象，该方法返回一个纯 JavaScript 对象， (类型 `toJSON` `toJSON` 为 `Visio.Interfaces.ShapeData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -304,9 +312,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: db857aca01d9a64b2dd052a06e51a233676aa585
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 4996f66b2ef34833d16affed0939f08f24163536
+  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49193059"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "50542018"
