commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.textframedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.textframedata.yml
@@ -190,7 +190,7 @@ properties:
   package: excel!
   fullName: verticalOverflow
   summary: >-
-    表示文本框的垂直溢出行为。 请参阅 Excel.ShapeTextVerticalOverflow<!-- -->\` 有关详细信息。
+    表示文本框的垂直溢出行为。 有关详细信息，请参阅 `Excel.ShapeTextVerticalOverflow`。
 
 
     \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -202,9 +202,9 @@ properties:
     return:
       type: <xref uid="excel!Excel.ShapeTextVerticalOverflow:enum" /> | "Overflow" | "Ellipsis" | "Clip"
 metadata:
-  ms.openlocfilehash: a7910af9592c24ea50d58bc8eb2f36f3b249d53d
-  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
+  ms.openlocfilehash: e751fa275c62689ebc53e10dd1269ed44d6f6c58
+  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/08/2021
-  ms.locfileid: "50534157"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "50607548"
