--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.textframeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.textframeloadoptions.yml
@@ -222,7 +222,7 @@ properties:
   package: excel!
   fullName: verticalOverflow
   summary: >-
-    表示文本框的垂直溢出行为。 请参阅 Excel.ShapeTextVerticalOverflow<!-- -->\` 有关详细信息。
+    表示文本框的垂直溢出行为。 有关详细信息，请参阅 `Excel.ShapeTextVerticalOverflow`。
 
 
     \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -234,9 +234,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 114c9c53614780e785428a48129820130b20e66f
-  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
+  ms.openlocfilehash: 799d75ca78b5c29b57489e2a96f250c2f1db2ebd
+  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/08/2021
-  ms.locfileid: "50534094"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "50607541"
