--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.textframeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.textframeupdatedata.yml
@@ -174,7 +174,7 @@ properties:
   package: excel!
   fullName: verticalOverflow
   summary: >-
-    表示文本框的垂直溢出行为。 请参阅 Excel.ShapeTextVerticalOverflow<!-- -->\` 有关详细信息。
+    表示文本框的垂直溢出行为。 有关详细信息，请参阅 `Excel.ShapeTextVerticalOverflow`。
 
 
     \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -186,9 +186,9 @@ properties:
     return:
       type: <xref uid="excel!Excel.ShapeTextVerticalOverflow:enum" /> | "Overflow" | "Ellipsis" | "Clip"
 metadata:
-  ms.openlocfilehash: b45d052762f8885c40f2bc3af63aec75565f066e
-  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
+  ms.openlocfilehash: 27a2953f2642b63aa674103f6285c17a7b5a814c
+  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/08/2021
-  ms.locfileid: "50534087"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "50607568"
