--- a/docs/docs-ref-autogen/excel/excel/excel.textframe.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.textframe.yml
@@ -222,7 +222,7 @@ properties:
   package: excel!
   fullName: verticalOverflow
   summary: >-
-    表示文本框的垂直溢出行为。 请参阅 Excel.ShapeTextVerticalOverflow<!-- -->\` 有关详细信息。
+    表示文本框的垂直溢出行为。 有关详细信息，请参阅 `Excel.ShapeTextVerticalOverflow`。
 
 
     \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -366,9 +366,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 8e4bb682dc52ffd79e362663510541207b3f77a5
-  ms.sourcegitcommit: 276e655472f82435a4b1227fbbb2feb687b659c0
+  ms.openlocfilehash: 068ecd23bda6bef337c162856ab1db5c944b6c39
+  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/08/2021
-  ms.locfileid: "50540605"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "50607562"
