--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.presentation.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.presentation.yml
@@ -26,7 +26,7 @@ properties:
   package: powerpoint!
   fullName: slideMasters
   summary: >-
-    返回演示文稿 `SlideMaster` 中的对象的集合。
+    返回演示文稿 `SlideMaster` 中对象的集合。
 
 
     \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -89,7 +89,7 @@ methods:
       type: <xref uid="powerpoint!PowerPoint.InsertSlideOptions:interface" />
     return:
       type: void
-      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/prod/samples/powerpoint/preview-apis/insert-slides.yaml\nawait PowerPoint.run(async function(context) {\n    const selectedSlideID = await getSelectedSlideID();\n\n    context.presentation.insertSlidesFromBase64(chosenFileBase64, {\n        formatting: PowerPoint.InsertSlideFormatting.useDestinationTheme,\n        targetSlideId: selectedSlideID + \"#\"\n    });\n    await context.sync();\n});\n```"
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/prod/samples/powerpoint/slide-management/insert-slides.yaml\nawait PowerPoint.run(async function(context) {\n    const selectedSlideID = await getSelectedSlideID();\n\n    context.presentation.insertSlidesFromBase64(chosenFileBase64, {\n        formatting: PowerPoint.InsertSlideFormatting.useDestinationTheme,\n        targetSlideId: selectedSlideID + \"#\"\n    });\n    await context.sync();\n});\n```"
 - name: load(options)
   uid: powerpoint!PowerPoint.Presentation#load:member(1)
   package: powerpoint!
@@ -119,7 +119,7 @@ methods:
     content: 'load(propertyNames?: string | string[]): PowerPoint.Presentation;'
     parameters:
     - id: propertyNames
-      description: 用逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="powerpoint!PowerPoint.Presentation:class" />
@@ -153,7 +153,7 @@ methods:
   uid: powerpoint!PowerPoint.Presentation#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的方法。) 而原始 PowerPoint.Presentation 对象是一个 API 对象，该方法返回一个类型为 (`toJSON` `toJSON` JavaScript 对象 `PowerPoint.Interfaces.PresentationData`<!-- -->) 包含原始对象中任何加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的对象的方法。) 而原始 PowerPoint.Presentation 对象是一个 API 对象，该方法返回一个纯 `toJSON` JavaScript 对象， (类型为 `toJSON``PowerPoint.Interfaces.PresentationData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -164,9 +164,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 2b672f7a9dd4a87afd30d7cc8056c4932bd00f78
-  ms.sourcegitcommit: f229afdd4c2bc820ac799394a77b637fc66e87b4
+  ms.openlocfilehash: 48b379dd4206f3cbfeb1cd5922a4ab14f4ff1d17
+  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/27/2021
-  ms.locfileid: "49992316"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "50607590"
