--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.slidecollection.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.slidecollection.yml
@@ -4,7 +4,7 @@ uid: powerpoint!PowerPoint.SlideCollection:class
 package: powerpoint!
 fullName: PowerPoint.SlideCollection
 summary: >-
-  代表演示文稿中幻灯片的集合。
+  代表演示文稿中的幻灯片集合。
 
 
   \[[API 集：PowerPointApi 1.2](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -58,7 +58,7 @@ methods:
       type: <xref uid="powerpoint!PowerPoint.AddSlideOptions:interface" />
     return:
       type: void
-      description: ''
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/prod/samples/powerpoint/preview-apis/add-slides.yaml\nconst chosenMaster = $(\"#master-id\").val() as string;\nconst chosenLayout = $(\"#layout-id\").val() as string;\n\nawait PowerPoint.run(async function(context) {\n  context.presentation.slides.add({\n    slideMasterId: chosenMaster,\n    layoutId: chosenLayout\n  });\n  await context.sync();\n});\n```"
 - name: getCount()
   uid: powerpoint!PowerPoint.SlideCollection#getCount:member(1)
   package: powerpoint!
@@ -81,7 +81,7 @@ methods:
   package: powerpoint!
   fullName: getItem(key)
   summary: >-
-    使用唯一 ID 获取幻灯片。
+    使用其唯一 ID 获取幻灯片。
 
 
     \[[API 集：PowerPointApi 1.2](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -117,13 +117,13 @@ methods:
       type: number
     return:
       type: <xref uid="powerpoint!PowerPoint.Slide:class" />
-      description: 位于给定索引的幻灯片。 如果索引在范围外，则会引发错误。
+      description: 给定索引中的幻灯片。 如果索引在范围外，则会引发错误。
 - name: getItemOrNullObject(id)
   uid: powerpoint!PowerPoint.SlideCollection#getItemOrNullObject:member(1)
   package: powerpoint!
   fullName: getItemOrNullObject(id)
   summary: >-
-    使用唯一 ID 获取幻灯片。 如果此类幻灯片不存在，则返回属性设置为 true `isNullObject` 的对象。 有关详细信息，请参阅 [*OrNullObject 方法和属性](https://docs.microsoft.com/office/dev/add-ins/develop/application-specific-api-model#ornullobject-methods-and-properties)<!-- -->.
+    使用其唯一 ID 获取幻灯片。 如果此类幻灯片不存在，则返回属性设置为 true `isNullObject` 的对象。 有关详细信息，请参阅 [*OrNullObject 方法和属性](https://docs.microsoft.com/office/dev/add-ins/develop/application-specific-api-model#ornullobject-methods-and-properties)<!-- -->.
 
 
     \[[API 集：PowerPointApi 1.2](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -168,7 +168,7 @@ methods:
     content: 'load(propertyNames?: string | string[]): PowerPoint.SlideCollection;'
     parameters:
     - id: propertyNames
-      description: 用逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="powerpoint!PowerPoint.SlideCollection:class" />
@@ -194,7 +194,7 @@ methods:
   uid: powerpoint!PowerPoint.SlideCollection#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始对象是 API 对象，该方法返回一个类型为 (`toJSON` `PowerPoint.SlideCollection` `toJSON` JavaScript 对象 `PowerPoint.Interfaces.SlideCollectionData`<!-- -->) 包含"items"数组，其中包含集合项中任何已加载属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始对象是 API 对象，该方法返回一个纯 JavaScript 对象， (类型 `toJSON` `PowerPoint.SlideCollection` `toJSON` 为 `PowerPoint.Interfaces.SlideCollectionData`<!-- -->) 包含"items"数组，其中包含集合项中任何已加载属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -205,9 +205,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 6ffa34673d190204091c6128f8b8cfd40ea6fdd1
-  ms.sourcegitcommit: f229afdd4c2bc820ac799394a77b637fc66e87b4
+  ms.openlocfilehash: 4577a34c2b2858fdd385b86722b7bf3886ad9c3c
+  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/27/2021
-  ms.locfileid: "49992302"
+  ms.lasthandoff: 03/10/2021
+  ms.locfileid: "50607597"
